# aoc

./: .gitignore  README.md  template.py
1/: README.md  main.py  part1.pl
10/: README.md  improved.hs  main.py  part1.hs  part2.hs
11/: .gitignore  README.md  large2.txt  middle2.txt  part1.s  part2.py  part2.s  part2a.py  tapecheck.py  tapedump.py  taperecord.py  test1.s
12/: README.md  main.py  part1.f  part2.f
13/: main.py  output
14/: README.md  main.py  package-lock.json  package.json  run.bat
15/: README.md  main.py  parts.groovy  red_black.txt
16/: README.md  example_input  main.py
17/: README.md  main.py
18/: main.py  part1.py  part2.py  test.py
19/: main.py  run.sh
2/: README.md  main.py  part1.sh
20/: README.md  edgematch.def  edgematch.mod  grid.def  hello.mod  monsters.def  monsters.mod  part1.mod  part2.mod  run.sh  test.mod  tileset.def  tileset.mod
2019/: intcode_disasm.rs
2021/: README.md
2022/20/associative_positional_list/: Cargo.toml
2022/20/associative_positional_list/src/: lib.rs
2022/20/associative_positional_list/tests/: test1.rs  test2.rs  traits.rs
2022/20/tree_list/: Cargo.toml
2022/20/tree_list/src/: lib.rs
2022/20/tree_list/tests/: test1.rs  test2.rs
21/: parts.rb
22/: main.py
23/: README.md  dot.sh  main.py
24/: README.md  example_input  optimised.py  parts.lua  pythonise.py
25/: README.md
3/: README.md  main.py  part0.sql  part1.sql  part2.sql
4/: main.py  part1.sh  part2.sh
5/: README.md  main.py  test.ps1
6/: main.py  part2.sh  question_counter.vhdl  test.sh  test.vhdl
7/: README.md  (+10 more)
(+210 files in other folders)
