[package]
name = "tree_list"
version = "0.1.0"
edition = "2021"
description = "TreeList implements an indexed list in which you can insert, remove, access and find elements by value in O(log N) time"
homepage = "https://www.jwhitham.org/"
license = "MIT OR Apache-2.0"
authors = ["Jack Whitham"]

[dev-dependencies]
rand = { version = "0.8.0" }
